== BCD-UI Release Notes

=== Release Notes

The following release notes allow to follow BCD-UI's updates and to judge whether migrating to a newer version is worth it.
Some changes are backward incompatible and may require code change in the project. They are listed here as well.

==== Release 5_3_0 ...in progress

.Major new features:

. Components: Scorecard, Cube, Charts, Export
* to come

. Widgets
* periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
* disableNavPath attribute to turn off navPath linkage

. Core
* to come

. Themes
* to come

. Security
* to come

. Build / Dev / Docu
* to come

.Major bug fixes:
* to come

.Backward Incompatibilities:
* cube/scorecard blindUpDowns, ranking require new i18n keys (bcd_Rank_, bcd_Sc_Blind_, bcd_Cb_Blind_)


==== Release 5_2_0

.Major new features:

. Components: Scorecard, Cube, Charts, Export
* Scorecard configurator added support for templates, ranking, sorting
* New reporting component added: a Free Analysis Report component (FAR)

. Widgets
* htmlHeaderBuilder now adds css classes bcdDimension/bcdMeasure
* New filter widget bcduiUniversalFilterNg allowing AND/OR expressions

. Core
* wrs-request wrq now supports HAVING clause
* New bcdui.wkModels.bcdCategories well-known model
* New Wrq2SqlServlet returning plain SQL generated from WRS-Request
* Extended features for taking over filters for detail export and drill

.Backward Incompatibilities:
. dm:FilterTranslation, dm:DimensionTranslation and dm:PeriodTranslation were renamed to dm:FT, dm:DT and dm:PT
. dm:FilterTranslation toRangeWhen attribute was moved to dm:PeriodTranslation
. LoginServlet was removed, adjust web.xml and let loginform have action=""

==== Release 5_1_0

.Major new features:

. Components: Scorecard, Cube, Charts, Export
* Added Scorecard configurator with a drag'n drop area similar to the cube one