@@ -11,7 +11,8 @@ Some changes are backward incompatible and may require code change in the projec
 .Major new features:
 
 . Components: Scorecard, Cube, Charts, Export
-* to come
+* Charts support for dark themes
+* Charts removed some chart background grid elements for less crowded charts
 
 . Widgets
 * periodChooser got new options: useSimpleXPath to use a straight forward xpath, autoPopup to directly show the popup calendar and suppressButtons to not show any buttons at all
